# cppjiebapy

./: CMakeLists.txt  README.md
dict/: README.md
python/: cppjiebapy.py  findlib.py
test/: test.py
